--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.18.1
-tensorflow==2.15.0
-pandas==1.3.3
-numpy==1.23.5
+numpy
 scikit-learn==0.24.2
-joblib==1.0.1
+joblib
+tensorflow==2.7.0
+pandas
