--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit==1.18.1
-numpy
-scikit-learn==0.24.2
-joblib
-tensorflow==2.7.0
-pandas
+streamlit==1.36.0
+pandas==1.3.3
+numpy==1.21.1
+joblib==1.0.1
+tensorflow==2.15.0
