--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-pandas
-numpy
-joblib
-tensorflow==1.36.0
+streamlit==1.4.0
+pandas==1.3.5
+numpy==1.21.5
+joblib==1.4.2
+tensorflow==2.7.0
